--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Hello!</title>
     </head>
     <body>
-        <h1 style="color:blue;">Welcome to my website!</h1>
+        <h1 style="color:darkgray;">Welcome to my website!</h1>
         <h2>Hello!</h2>
         Hello, world!
     </body>
