--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h1 style="color:darkgreen;">Welcome to my website.</h1>
         <h2>Hello</h2>
-        Hello, Peter!
+        Hello, world!
     </body>
 </html>
