--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hello</title>
+        <style>
+            *, *::before, *::after { box-sizing: inherit; }
+            html { box-sizing: border-box; -webkit-text-size-adjust: 100%; }
+            body {
+                margin: 0;
+                padding: 16px;
+                font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+                line-height: 1.5;
+                color: #111;
+                background: #fff;
+            }
+            main {
+                max-width: 1000px;
+                margin: 0 auto;
+            }
+            img { max-width: 100%; height: auto; display: block; }
+            h1 { font-size: clamp(1.5rem, 4vw, 2.25rem); margin: 0 0 .5rem; color: darkgreen; }
+            h2 { font-size: clamp(1.1rem, 3vw, 1.5rem); margin: 0 0 .75rem; }
+            p { margin: 0 0 1rem; }
+            @media (max-width: 420px) {
+                body { padding: 12px; }
+                main { padding: 6px; }
+                h1 { margin-bottom: .5rem; }
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:darkgreen;">Welcome to my website.</h1>
-        <h2>Hello</h2>
-        Hello, world!
+        <main>
+            <h1>Welcome to my website.</h1>
+            <h2>Hello</h2>
+            <p>Hello, world!</p>
+        </main>
     </body>
 </html>
