--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <main>
-            <h1>Welcome to my website.</h1>
+            <h1>Welcome to Doug's website.</h1>
             <h2>Hello</h2>
             <p>Hello, world!</p>
         </main>
