--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello</title>
+        <title>Doug LaCombe - Architect</title>
         <style>
             *, *::before, *::after { box-sizing: inherit; }
             html { box-sizing: border-box; -webkit-text-size-adjust: 100%; }
@@ -19,7 +19,7 @@
                 margin: 0 auto;
             }
             img { max-width: 100%; height: auto; display: block; }
-            h1 { font-size: clamp(1.5rem, 4vw, 2.25rem); margin: 0 0 .5rem; color: darkgreen; }
+            h1 { font-size: clamp(1.5rem, 4vw, 2.25rem); margin: 0 0 .5rem; color: darkblue; }
             h2 { font-size: clamp(1.1rem, 3vw, 1.5rem); margin: 0 0 .75rem; }
             p { margin: 0 0 1rem; }
             @media (max-width: 420px) {
@@ -32,8 +32,8 @@
     <body>
         <main>
             <h1>Welcome to Doug's website.</h1>
-            <h2>Hello</h2>
-            <p>Hello, world!</p>
+            <h2>[placeholder]</h2>
+            <p>Portfolio forthcoming. </p>
         </main>
     </body>
 </html>
