index.html update

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <main>
-            <h1>Welcome to Doug's website.</h1>
+            <h1>Doug LaCombe</h1>
             <h2>[placeholder]</h2>
             <p>Portfolio forthcoming. </p>
         </main>
